// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SankeyTouchpoint should render component Sankey Chart 1`] = `
<svg
  class="analytics-sankey-node-group"
  y="-28"
>
  <rect
    class="analytics-sankey-node"
    fill="#D7D7DA"
    fill-opacity="1"
    height="NaN"
    stroke="none"
    width="NaN"
    y="6"
  />
  <g
    class="analytics-sankey-information"
  >
    <text
      class="analytics-sankey-views"
      fill="#6C6C76"
      x="25"
      y="-44"
    >
       Views
    </text>
    <circle
      cx="7"
      cy="-23"
      fill="#D7D7DA"
      r="12"
    />
    <text
      class="analytics-sankey-icon-reference analytics-sankey-icon-normal text-truncated"
      x="2.5"
      y="-18"
    >
      P
    </text>
    <text
      class="analytics-sankey-title text-truncated"
      y="0"
    >
      <title>
        https://www-nightly.liferay.com/
      </title>
      <tspan
        dx="25"
        dy="-26"
        x="0"
        y="0"
      >
        https://www-
      </tspan>
      <tspan
        dx="25"
        dy="-12"
        x="0"
        y="0"
      >
        nightly.liferay.com/
      </tspan>
    </text>
    <g>
      <circle
        cx="7"
        cy="18"
        fill="#D7D7DA"
        r="9"
      />
      <rect
        fill="#D7D7DA"
        height="21"
        lines="2"
        width="2"
        x="6"
        y="-11"
      />
      <text
        class="analytics-sankey-icon-reference analytics-sankey-icon-small"
        x="4"
        y="21.5"
      >
        A
      </text>
      <text
        class="analytics-sankey-subtitle"
        y="31"
      >
        <a
          href="/workspace/2000/123/assets/blogs/1000/page/https%3A%2F%2Fwww-nightly.liferay.com%2F/liferay.com?rangeKey=30"
        >
          <title>
            liferay.com
          </title>
          <tspan
            dx="25"
            dy="-10"
            x="0"
            y="31"
          >
            liferay.com
          </tspan>
        </a>
      </text>
    </g>
    <g>
      <circle
        cx="7"
        cy="50"
        fill="#D7D7DA"
        r="9"
      />
      <rect
        fill="#D7D7DA"
        height="21"
        lines="2"
        width="2"
        x="6"
        y="21"
      />
      <text
        class="analytics-sankey-icon-reference analytics-sankey-close-list analytics-sankey-icon-small"
        x="4"
        y="53.5"
      >
        -
      </text>
      <text
        class="analytics-sankey-subtitle"
        y="63"
      >
        <tspan
          class="analytics-sankey-text-button"
          role="button"
        >
          <title>
            Close List
          </title>
          <tspan
            dx="25"
            dy="-10"
            x="0"
            y="63"
          >
            Close List
          </tspan>
        </tspan>
      </text>
    </g>
  </g>
  <text
    class="analytics-sankey-numbers-of-views"
    dy="5"
    text-anchor="middle"
    x="100"
    y="NaN"
  />
</svg>
`;

exports[`SankeyTouchpoint should render component Sankey Chart Main 1`] = `
<svg
  y="-91"
>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="1"
      height="NaN"
      width="200"
      x="0"
      y="232"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="1"
      stroke-width="2"
      x1="0"
      y1="232"
      y2="232"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="1"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="1"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="1"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="1"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="1"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="1"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <rect
    class="analytics-sankey-node"
    fill="#FFFFFF"
    fill-opacity="0.8"
    height="0"
    stroke="none"
    width="0"
    x="10"
    y="242"
  />
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="0"
      height="NaN"
      width="200"
      x="0"
      y="232"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="0"
      stroke-width="2"
      x1="0"
      y1="232"
      y2="232"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="0"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="0"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="0"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="0"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <svg>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      fill-opacity="0"
      height="NaN"
      width="200"
      x="0"
      y="NaN"
    />
    <line
      stroke="#F1F2F5"
      stroke-opacity="0"
      stroke-width="2"
      x1="0"
      y1="NaN"
      y2="NaN"
    />
  </svg>
  <g>
    <rect
      class="analytics-sankey-node"
      fill="#D7D7DA"
      height="40"
      width="0"
      y="191"
    />
    <text
      class="analytics-sankey-title"
      dy="-14"
      fill="#000000"
      text-anchor="middle"
      x="100"
      y="232"
    >
      112
    </text>
    <title>
      Direct Traffic
    </title>
  </g>
  <svg
    y="183"
  >
    <g>
      <text
        class="analytics-sankey-views"
        fill="#6C6C76"
        x="25"
        y="-44"
      >
        65.57K Views
      </text>
      <circle
        cx="7"
        cy="-23"
        fill="#D7D7DA"
        r="12"
      />
      <text
        class="analytics-sankey-icon-reference analytics-sankey-icon-normal text-truncated"
        x="2.5"
        y="-18"
      >
        P
      </text>
      <text
        class="analytics-sankey-title text-truncated"
        y="0"
      >
        <title>
          https://www-nightly.liferay.com/
        </title>
        <tspan
          dx="25"
          dy="-26"
          x="0"
          y="0"
        >
          https://www-
        </tspan>
        <tspan
          dx="25"
          dy="-12"
          x="0"
          y="0"
        >
          nightly.liferay.com/
        </tspan>
      </text>
      <g>
        <circle
          cx="7"
          cy="18"
          fill="#D7D7DA"
          r="9"
        />
        <rect
          fill="#D7D7DA"
          height="21"
          lines="2"
          width="2"
          x="6"
          y="-11"
        />
        <text
          class="analytics-sankey-icon-reference analytics-sankey-icon-small"
          x="4"
          y="21.5"
        >
          A
        </text>
        <text
          class="analytics-sankey-subtitle"
          y="31"
        >
          <a
            href="/workspace/2000/123/assets/blogs/1000/page/https%3A%2F%2Fwww-nightly.liferay.com%2F/liferay.com?rangeKey=30"
          >
            <title>
              liferay.com
            </title>
            <tspan
              dx="25"
              dy="-10"
              x="0"
              y="31"
            >
              liferay.com
            </tspan>
          </a>
        </text>
      </g>
      <g>
        <circle
          cx="7"
          cy="50"
          fill="#D7D7DA"
          r="9"
        />
        <rect
          fill="#D7D7DA"
          height="21"
          lines="2"
          width="2"
          x="6"
          y="21"
        />
        <text
          class="analytics-sankey-icon-reference analytics-sankey-close-list analytics-sankey-icon-small"
          x="4"
          y="53.5"
        >
          -
        </text>
        <text
          class="analytics-sankey-subtitle"
          y="63"
        >
          <tspan
            class="analytics-sankey-text-button"
            role="button"
          >
            <title>
              Close List
            </title>
            <tspan
              dx="25"
              dy="-10"
              x="0"
              y="63"
            >
              Close List
            </tspan>
          </tspan>
        </text>
      </g>
    </g>
  </svg>
  <text
    class="analytics-sankey-numbers-of-views"
    dy="5"
    text-anchor="middle"
    x="100"
    y="236"
  >
    65.46K
  </text>
</svg>
`;

exports[`SankeyTouchpoint should render component Sankey Chart with direct access 1`] = `
<div
  class="analytics-sankey-parent"
>
  <div
    class="analytics-sankey-parent-box"
  >
    <div
      class="analytics-sankey-parent-content"
    >
      <div
        class="analytics-sankey-parent-value"
      >
        112 Views
      </div>
      <div
        class="analytics-sankey-parent-title"
      >
        <span
          class="text-truncate"
        >
          https://www-nightly.liferay.com/
        </span>
      </div>
      <div
        class="analytics-sankey-parent-show-more"
      >
        <a
          class="icon icon-asset"
          href="/workspace/2000/123/assets/blogs/1000/page/https%3A%2F%2Fwww-nightly.liferay.com%2F/liferay.com?rangeKey=30"
        >
          <span
            class="text-truncate"
          >
            liferay.com
          </span>
        </a>
      </div>
    </div>
    <div
      class="analytics-sankey-parent-square"
      style="background-color:#50D2A0"
    >
      112
    </div>
  </div>
</div>
`;

exports[`SankeyTouchpoint should render component Sankey Chart with direct access and asset list 1`] = `
<div
  class="analytics-sankey-parent"
>
  <div
    class="analytics-sankey-parent-box"
  >
    <div
      class="analytics-sankey-parent-content"
    >
      <div
        class="analytics-sankey-parent-value"
      >
        112 Views
      </div>
      <div
        class="analytics-sankey-parent-title"
      >
        <span
          class="text-truncate"
        >
          https://www-nightly.liferay.com/
        </span>
      </div>
      <div
        class="analytics-sankey-parent-show-more"
      >
        <ul>
          <li>
            <button
              aria-pressed="false"
              class="action-link icon icon-plus"
            >
              Show Top 2 Assets
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="analytics-sankey-parent-square"
      style="background-color:#50D2A0"
    >
      112
    </div>
  </div>
</div>
`;

exports[`SankeyTouchpoint should render component Sankey Chart with empty state 1`] = `
<div
  class="analytics-sankey-parent"
>
  <div
    class="analytics-sankey-parent-box"
  >
    <div
      class="analytics-sankey-parent-content"
    >
      <div
        class="analytics-sankey-parent-value"
      >
        112 Views
      </div>
      <div
        class="analytics-sankey-parent-title"
      >
        <span
          class="text-truncate"
        >
          https://www-nightly.liferay.com/
        </span>
      </div>
    </div>
    <div
      class="analytics-sankey-parent-square"
      style="background-color:#DCDDE1"
    >
      112
    </div>
  </div>
  <div
    class="analytics-sankey-parent-text"
  >
    <p
      class="mb-2"
    >
      No data found for the selected filter.
    </p>
    <p
      class="font-size-sm"
    >
      The selected filter did not match any result.
    </p>
  </div>
</div>
`;
